# nodo-ocaml

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  dune-project  nodo-cli-lib.opam  nodo-cli.opam  nodo-filesystem.opam  nodo-git-binary.opam  nodo-git-filesystem.opam  nodo-git-memory.opam  nodo-json.opam  nodo-markdown.opam  nodo.opam  zcomp
ci/: dune  logging.ml  nodo_ci.ml
lib/: dune  nodo.ml
lib/cli/: cli.ml  common.ml  complete.ml  completion.ml  config.ml  dune  edit.ml  format.ml  move.ml  nodo_cli.ml  nodo_cli_lib.ml  remove.ml  show.ml  storage.ml  sync.ml  zshcomp.ml
lib/core/: dune  nodo_core.ml
lib/filesystem/: dune  nodo_filesystem.ml  nodo_filesystem.mli
lib/git-binary/: dune  nodo_git_binary.ml
lib/git-filesystem/: dune  nodo_git_filesystem.ml  nodo_git_filesystem.mli
lib/git-memory/: dune  nodo_git_memory.ml
lib/json/: dune  json.ml  json.mli
lib/markdown/: dune  nodo_markdown.ml
lib/nodo/: dune  json.ml  markdown.ml  nodo.ml  nodo_core.ml
lib/nodo-cli/: dune  remove.ml  show.ml
lib/nodo-filesystem/: dune  nodo_filesystem.mli
lib/nodo-markdown/: dune  nodo_markdown.ml
src/: main.rs
src/cli/: dune  edit.ml  mod.rs  remove.ml  show.ml
src/commands/: archive.rs  clean.rs  due.rs  edit.rs  error.rs  format.rs  list.rs  mod.rs  new.rs  overview.rs  remove.rs  show.rs
src/config/: mod.rs
src/core/: dune  nodo_core.ml
src/files/: markdown.rs  mod.rs
src/filesystem/: dune  nodo_filesystem.ml  nodo_filesystem.mli
src/markdown/: dune  nodo_markdown.ml  nodo_markdown.mli
src/nodo/: mod.rs
src/util/: mod.rs
src/util/file/: mod.rs
src/util/project/: mod.rs
test/cli/: cli.ml  dune  storage.ml
test/markdown/: nodo1.md
