[package]
name = "nodo"
version = "0.1.0"
authors = ["Jeffas <dev@jeffas.io>"]
edition = "2018"

[dependencies]
pulldown-cmark = "0.6.0"
structopt = "0.3.3"
log = "0.4.8"
stderrlog = "0.4.1"
dirs = "2.0.2"
chrono = "0.4.9"
confy = "0.3.1"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tempfile = "3.1.0"
pretty_assertions = "0.6.1"
